# doit2-old

./: com.munchkinhalfling.DoIt2.json  meson.build
data/: com.munchkinhalfling.DoIt2.appdata.xml.in  com.munchkinhalfling.DoIt2.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: addtododialog.ui  addtododialog.ui~  addtododialog.vala  app.css  daylabel.vala  doit2.gresource.xml  main.vala  meson.build  tests.vala  tododisplay.ui~  tododisplay.vala  util.vala  window.ui  window.ui~  window.vala
src/libassert/: libassert.vala  meson.build
